--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,15 @@
 	"presets": [
 		"react",
 		"es2015",
-		"stage-0",
+		"stage-0"
 	],
 	"plugins": [
-		"transform-decorators-legacy",
-		"transform-class-properties"
+		[
+			"import",
+			{
+				"libraryName": "antd",
+				"style": true
+			}
+		]
 	]
 }
