--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "pxq",
-  "version": "1.0.1",
-  "description": "react-demo",
-  "main": "server.js",
+  "name": "react-redux",
+  "version": "1.0.0",
+  "description": "",
+  "main": "",
   "scripts": {
     "dev": "rm -rf dist && webpack-dev-server --open --progress --colors",
-    "prod": "rm -rf dist && webpack --env.production --progress --colors",
-    "dist": "webpack --config webpack.config.dist.js --progress --colors --watch -p"
+    "prod": "rm -rf dist && webpack --env.production --progress --colors"
   },
   "repository": {
     "type": "github",
@@ -19,24 +18,20 @@
   },
   "homepage": "https://github.com/bailicangdu/pxq#readme",
   "dependencies": {
-    "github-markdown-css": "^2.4.0",
-    "immutable": "^3.8.1",
-    "isomorphic-fetch": "^2.2.1",
-    "normalize.css": "^4.1.1",
-    "pure-render-decorator": "^1.2.1",
+    "antd": "^2.8.0",
+    "axios": "^0.15.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "redux-immutablejs": "^0.0.8",
-    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
@@ -44,8 +39,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "body-parser": "^1.15.1",
-    "css-loader": "^0.23.1",
-    "express": "^4.14.0",
+    "css-loader": "^0.27.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.22.0",
