--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,16 @@
 {
 	"presets": [
+		[
+			"es2015",
+			{
+				"modules": false
+			}
+		],
 		"react",
-		"es2015",
 		"stage-0"
 	],
 	"plugins": [
+		"react-hot-loader/babel",
 		[
 			"import",
 			{
