--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
-    "dev": "rm -rf dist && webpack-dev-server --open --progress --colors",
+    "dev": "webpack-dev-server --hot --progress --colors",
     "prod": "rm -rf dist && webpack --env.production --progress --colors"
   },
   "repository": {
@@ -32,33 +32,25 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-plugin-import": "^1.1.1",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
-    "body-parser": "^1.15.1",
     "css-loader": "^0.27.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.22.0",
-    "http-proxy-middleware": "^0.17.3",
     "jsx-loader": "^0.13.2",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.11.3",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.3",
     "sass": "^0.5.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-dev-server": "^2.4.1"
   }
 }
