--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "",
   "main": "",
   "scripts": {
-    "dev": "webpack-dev-server --hot --progress --colors",
+    "dev": "node server.js",
     "prod": "rm -rf dist && webpack --env.production --progress --colors"
   },
   "repository": {
     "type": "github",
-    "url": "https://github.com/bailicangdu/pxq"
+    "url": "https://github.com/youngluo/react-redux"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bailicangdu/pxq/issues"
+    "url": "https://github.com/youngluo/react-redux/issues"
   },
-  "homepage": "https://github.com/bailicangdu/pxq#readme",
+  "homepage": "https://github.com/youngluo/react-redux#readme",
   "dependencies": {
     "antd": "^2.8.0",
     "axios": "^0.15.3",
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.27.1",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.22.0",
@@ -43,7 +44,7 @@
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.11.3",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-hot-loader": "^1.3.1",
     "react-transform-catch-errors": "^1.0.2",
     "redbox-react": "^1.3.3",
     "sass": "^0.5.0",
@@ -51,6 +52,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
