--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-redux",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "",
   "scripts": {
@@ -12,21 +12,21 @@
     "url": "https://github.com/youngluo/react-redux"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/youngluo/react-redux/issues"
   },
   "homepage": "https://github.com/youngluo/react-redux#readme",
   "dependencies": {
-    "antd": "^2.8.0",
-    "axios": "^0.15.3",
+    "antd": "^2.13.7",
+    "axios": "^0.17.0",
     "es6-promise": "^4.1.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -44,8 +44,7 @@
     "jsx-loader": "^0.13.2",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
-    "mockjs": "^1.0.1-beta3",
-    "node-sass": "^3.11.3",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.1",
     "react-transform-catch-errors": "^1.0.2",
     "redbox-react": "^1.3.3",
