--- a/package.json
+++ b/package.json
@@ -18,43 +18,43 @@
   },
   "homepage": "https://github.com/youngluo/react-redux#readme",
   "dependencies": {
-    "antd": "^2.13.7",
+    "antd": "^2.13.9",
     "axios": "^0.17.0",
     "es6-promise": "^4.1.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.1.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.27.1",
+    "css-loader": "^0.28.7",
     "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.8.5",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.22.0",
     "jsx-loader": "^0.13.2",
     "less": "^2.6.1",
-    "less-loader": "^2.2.3",
+    "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.1.2",
     "react-transform-catch-errors": "^1.0.2",
     "redbox-react": "^1.3.3",
-    "sass": "^0.5.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "sass": "^1.0.0-beta.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.1",
+    "webpack-dev-server": "^2.9.4",
     "webpack-hot-middleware": "^2.17.1"
   }
 }
