--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 7,
     "sourceType": "module",
@@ -27,5 +28,8 @@
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "import/no-extraneous-dependencies": "off",
+    "import/no-dynamic-require": "off",
+    "global-require": "off",
+    "import/prefer-default-export": "off"
   }
 }
