--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.18.2",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.1.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bundle-loader": "^0.5.5",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -50,6 +52,7 @@
     "less": "^2.6.1",
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
+    "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.2",
     "react-transform-catch-errors": "^1.0.2",
     "redbox-react": "^1.3.3",
