调整整体布局

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "import/no-extraneous-dependencies": "off",
     "import/no-dynamic-require": "off",
     "global-require": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "import/no-webpack-loader-syntax": "off"
   }
 }
