--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
-    "dev": "node server.js",
+    "start": "node server.js",
     "prod": "rm -rf dist && webpack --config webpack.config.prod.js --progress --colors"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "antd": "^2.13.9",
     "axios": "^0.17.0",
     "es6-promise": "^4.1.0",
+    "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
@@ -51,8 +52,8 @@
     "jsx-loader": "^0.13.2",
     "less": "^2.6.1",
     "less-loader": "^4.0.5",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
-    "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.2",
     "react-transform-catch-errors": "^1.0.2",
     "redbox-react": "^1.3.3",
