--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,24 @@
 {
-	"presets": [
-		"es2015",
-		"react",
-		"stage-0"
-	],
-	"plugins": [
-		[
-			"import",
-			{
-				"libraryName": "ui",
-				"style": true
-			}
-		]
-	]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "ie >= 10"]
+        },
+        "useBuiltIns": true
+      }
+    ],
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "ui",
+        "style": true
+      }
+    ]
+  ]
 }
