--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.0.0",
   "description": "",
   "main": "",
+  "browserslist": [
+    "last 2 versions",
+    "ie >= 10"
+  ],
   "scripts": {
     "start": "node server.js",
     "prod": "rm -rf dist && webpack --config webpack.config.prod.js --progress --colors"
@@ -20,7 +24,7 @@
   "dependencies": {
     "antd": "^2.13.9",
     "axios": "^0.17.0",
-    "es6-promise": "^4.1.0",
+    "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
@@ -30,14 +34,14 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.18.2",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.1.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
     "bundle-loader": "^0.5.5",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
@@ -53,7 +57,8 @@
     "less": "^2.6.1",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.1",
+    "postcss-loader": "^2.0.8",
     "react-hot-loader": "^3.1.2",
     "react-transform-catch-errors": "^1.0.2",
     "redbox-react": "^1.3.3",
