--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "start": "node server.js",
-    "prod": "rm -rf dist && webpack --config webpack.config.prod.js --progress --colors"
+    "prod": "webpack --config webpack.config.prod.js --progress --colors"
   },
   "repository": {
     "type": "github",
@@ -43,6 +43,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
     "bundle-loader": "^0.5.5",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -57,7 +58,7 @@
     "less": "^2.6.1",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
-    "node-sass": "^4.7.1",
+    "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.8",
     "react-hot-loader": "^3.1.2",
     "react-transform-catch-errors": "^1.0.2",
@@ -67,6 +68,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.9.4",
     "webpack-hot-middleware": "^2.17.1"
