--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "document": true,
     "navigator": true,
     "window": true,
-    "node": true
+    "node": true,
+    "__APP_NAME__": true
   },
   "extends": "airbnb",
   "plugins": ["react", "jsx-a11y", "import"],
@@ -31,6 +32,7 @@
     "import/no-dynamic-require": "off",
     "global-require": "off",
     "import/prefer-default-export": "off",
-    "import/no-webpack-loader-syntax": "off"
+    "import/no-webpack-loader-syntax": "off",
+    "consistent-return": "off"
   }
 }
