--- a/package.json
+++ b/package.json
@@ -63,10 +63,8 @@
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
+    "opn": "^5.1.0",
     "postcss-loader": "^2.0.8",
-    "react-hot-loader": "^3.1.2",
-    "react-transform-catch-errors": "^1.0.2",
-    "redbox-react": "^1.3.3",
     "sass": "^1.0.0-beta.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
@@ -74,7 +72,6 @@
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.9.4",
     "webpack-hot-middleware": "^2.17.1"
   }
 }
