--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "homepage": "https://github.com/youngluo/react-redux#readme",
   "dependencies": {
-    "antd": "^2.13.9",
+    "antd": "^3.6.1",
     "axios": "^0.17.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
