--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "ie >= 10"
   ],
   "scripts": {
-    "start": "cross-env API_ENV=mock node server.js",
-    "dev": "cross-env API_ENV=development node server.js",
-    "build:prod": "cross-env API_ENV=production webpack --config webpack.config.build.js --progress --colors",
-    "build:staging": "cross-env API_ENV=staging webpack --config webpack.config.build.js --progress --colors",
-    "build:dev": "cross-env API_ENV=development webpack --config webpack.config.build.js --progress --colors"
+    "start": "cross-env API_ENV=development webpack-dev-server --config webpack/config.dev.js --open --progress --colors --mode=development",
+    "build:prod": "cross-env API_ENV=production webpack --config webpack/config.build.js --progress --colors --mode=production",
+    "build:test": "cross-env API_ENV=test webpack --config webpack/config.build.js --progress --colors --mode=production",
+    "build:dev": "cross-env API_ENV=development webpack --config webpack/config.build.js --progress --colors --mode=production"
   },
   "repository": {
     "type": "github",
@@ -27,7 +26,6 @@
   "dependencies": {
     "antd": "^3.6.1",
     "axios": "^0.17.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
@@ -44,10 +42,10 @@
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
-    "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
@@ -56,24 +54,19 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "^0.13.2",
     "less": "^2.6.1",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
-    "node-sass": "^4.7.2",
-    "opn": "^5.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "postcss-loader": "^2.0.8",
-    "sass": "^1.0.0-beta.3",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
+    "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-cli": "^3.0.4",
+    "webpack-dev-server": "^3.1.4"
   }
 }
