--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "navigator": true,
     "window": true,
     "node": true,
-    "__APP_NAME__": true
+    "__APP_NAME__": true,
+    "__HOST__": true
   },
   "extends": "airbnb",
   "plugins": [
@@ -95,6 +96,10 @@
       {
         "max": 1
       }
+    ],
+    "eol-last": [
+      "error",
+      "never"
     ]
   }
 }
