--- a/package.json
+++ b/package.json
@@ -17,56 +17,56 @@
     "type": "github",
     "url": "https://github.com/youngluo/react-redux"
   },
-  "author": "",
+  "author": "Young Luo",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/youngluo/react-redux/issues"
   },
   "homepage": "https://github.com/youngluo/react-redux#readme",
   "dependencies": {
-    "antd": "^3.6.1",
-    "axios": "^0.17.0",
+    "antd": "3.6.1",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.1.1",
+    "autoprefixer": "^8.6.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "^0.13.2",
-    "less": "^2.6.1",
-    "less-loader": "^4.0.5",
-    "lodash": "^4.17.4",
+    "less": "2.6.1",
+    "less-loader": "^4.1.0",
+    "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
-    "postcss-loader": "^2.0.8",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
+    "postcss-loader": "^2.1.5",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-cli": "^3.0.4",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   }
 }
