--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
