--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "ie >= 10"
   ],
   "scripts": {
-    "start": "cross-env API_ENV=development webpack-dev-server --config webpack/config.dev.js --open --progress --colors --mode=development",
-    "build:prod": "cross-env API_ENV=production webpack --config webpack/config.build.js --progress --colors --mode=production",
-    "build:test": "cross-env API_ENV=test webpack --config webpack/config.build.js --progress --colors --mode=production",
-    "build:dev": "cross-env API_ENV=development webpack --config webpack/config.build.js --progress --colors --mode=production"
+    "start": "webpack server -c webpack/config.dev.js --open --progress --color",
+    "build:prod": "webpack --config webpack/config.build.js --progress --color",
+    "build:test": "webpack --config webpack/config.build.js --progress --color",
+    "build:dev": "webpack --config webpack/config.build.js --progress --color"
   },
   "repository": {
     "type": "github",
@@ -24,50 +24,49 @@
   },
   "homepage": "https://github.com/youngluo/react-redux#readme",
   "dependencies": {
-    "antd": "3.6.1",
-    "axios": "^0.18.0",
+    "antd": "^4.16.8",
+    "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.3",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-import": "^1.8.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "@types/node": "^16.4.1",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "autoprefixer": "^10.3.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "jsx-loader": "^0.13.2",
-    "less": "2.6.1",
-    "less-loader": "^4.1.0",
-    "lodash": "^4.17.10",
-    "mini-css-extract-plugin": "^0.4.0",
-    "postcss-loader": "^2.1.5",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.12.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
+    "node-sass": "^6.0.1",
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.3.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.45.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   }
 }
