--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
+    "@types/lodash": "^4.14.171",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
