--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "ts-import-plugin": "^1.6.7",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.45.1",
