--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   ],
   "scripts": {
     "start": "webpack server -c webpack/config.dev.js --open --progress --color",
-    "build:prod": "webpack --config webpack/config.build.js --progress --color",
-    "build:test": "webpack --config webpack/config.build.js --progress --color",
-    "build:dev": "webpack --config webpack/config.build.js --progress --color"
+    "build": "webpack -c webpack/config.prod.js --progress --color"
   },
   "repository": {
     "type": "github",
@@ -27,6 +25,7 @@
     "antd": "^4.16.8",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loadable": "^5.5.0",
@@ -37,16 +36,18 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
-    "@types/lodash": "^4.14.171",
+    "@types/lodash-es": "^4.17.4",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
-    "autoprefixer": "^10.3.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "cssnano-preset-advanced": "^5.1.3",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -58,10 +59,11 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
+    "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
     "ts-import-plugin": "^1.6.7",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
@@ -69,6 +71,7 @@
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.0-3"
   }
 }
