--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@/components/*": ["src/components/*"],
+      "@/containers/*": ["src/containers/*"],
+      "@/config/*": ["src/config/*"],
+      "@/pages/*": ["src/pages/*"],
+      "@/utils/*": ["src/utils/*"]
+    }
   },
-  "paths": {
-    "@/*": ["src/*"],
-    "@/components/*": ["src/components/*"],
-    "@/containers/*": ["src/containers/*"],
-    "@/config/*": ["src/config/*"],
-    "@/pages/*": ["src/pages/*"],
-    "@/util/*": ["src/utils/*"]
-  },
-  "include": ["src"]
+  "include": ["src", "global.d.ts"]
 }
