--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,22 @@
 {
   "presets": [
+    "@babel/preset-env",
     [
       "@babel/preset-react",
       {
         "runtime": "automatic"
       }
-    ]
+    ],
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": "css"
+      }
+    ],
+    "lodash"
   ]
 }
