--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux",
+  "name": "react-boilerplate",
   "version": "2.0.0",
   "description": "",
   "main": "",
@@ -8,35 +8,36 @@
     "ie >= 10"
   ],
   "scripts": {
-    "start": "webpack server -c webpack/config.dev.js --open --progress --color",
-    "build": "webpack -c webpack/config.prod.js --progress --color"
+    "start": "webpack server -c webpack/config.dev.js --node-env development",
+    "build": "webpack -c webpack/config.prod.js --node-env production",
+    "analyze": "yarn build --analyze"
   },
   "repository": {
     "type": "github",
-    "url": "https://github.com/youngluo/react-redux"
+    "url": "https://github.com/youngluo/react-boilerplate"
   },
   "author": "Young Luo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/youngluo/react-redux/issues"
+    "url": "https://github.com/youngluo/react-boilerplate/issues"
   },
-  "homepage": "https://github.com/youngluo/react-redux#readme",
+  "homepage": "https://github.com/youngluo/react-boilerplate#readme",
   "dependencies": {
     "antd": "^4.16.8",
     "axios": "^0.21.1",
-    "babel-polyfill": "^6.26.0",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loadable": "^5.5.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0"
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
     "@babel/preset-react": "^7.14.5",
-    "@types/lodash-es": "^4.17.4",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
@@ -44,6 +45,9 @@
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
@@ -56,6 +60,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.1",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
@@ -64,8 +69,6 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
-    "ts-import-plugin": "^1.6.7",
-    "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.45.1",
     "webpack-bundle-analyzer": "^4.4.2",
