--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
+    ],
     [
       "@babel/preset-react",
       {
@@ -10,6 +16,7 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
     [
       "import",
       {
