--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,6 @@
   "rules": {
     "semi": ["error", "never"],
     "comma-dangle": ["error", "never"],
-    "indent": ["error", 2],
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "import/no-extraneous-dependencies": "off",
@@ -48,9 +47,10 @@
         "max": 1
       }
     ],
-    "eol-last": ["error", "never"],
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": ["error", {"extensions": [".tsx"]}]
+    "react/jsx-filename-extension": ["error", {"extensions": [".tsx"]}],
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off"
   }
 }
