--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "",
   "browserslist": [
-    "last 2 versions",
-    "ie >= 10"
+    "last 1 version",
+    "> 1%"
   ],
   "scripts": {
     "start": "webpack server -c webpack/config.dev.js --node-env development",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/youngluo/react-boilerplate#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.6.3",
     "antd": "^4.16.8",
     "axios": "^0.21.1",
     "core-js": "3",
@@ -71,6 +72,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "typescript": "^4.3.5",
     "webpack": "^5.45.1",
     "webpack-bundle-analyzer": "^4.4.2",
