--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "cssnano-preset-advanced": "^5.1.3",
+    "error-overlay-webpack-plugin": "^0.4.2",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
