--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "> 1%"
   ],
   "scripts": {
-    "start": "webpack server -c webpack/config.dev.js --node-env development",
+    "start": "webpack server -c webpack/config.dev.js --hot --node-env development",
     "build": "webpack -c webpack/config.prod.js --node-env production",
     "analyze": "yarn build --analyze"
   },
@@ -22,6 +22,16 @@
     "url": "https://github.com/youngluo/react-boilerplate/issues"
   },
   "homepage": "https://github.com/youngluo/react-boilerplate#readme",
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "commit-msg": "node verifyCommit.js"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.6.3",
     "antd": "^4.16.8",
@@ -40,6 +50,7 @@
     "@babel/preset-env": "^7.14.9",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.6",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.14",
@@ -55,7 +66,6 @@
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "cssnano-preset-advanced": "^5.1.3",
-    "error-overlay-webpack-plugin": "^0.4.2",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -66,19 +76,21 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.3.1",
     "html-webpack-plugin": "^5.3.2",
+    "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
+    "react-refresh": "^0.10.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "typescript": "^4.3.5",
-    "webpack": "^5.45.1",
+    "webpack": "^5.51.1",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0",
     "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.0-3"
   }
