--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "> 1%"
   ],
   "scripts": {
-    "start": "webpack server -c webpack/config.dev.js --hot --node-env development",
+    "start": "webpack server -c webpack/config.dev.js --hot --open --node-env development",
     "build": "webpack -c webpack/config.prod.js --node-env production",
+    "dev": "yarn build --mode development",
     "analyze": "yarn build --analyze"
   },
   "repository": {
@@ -28,15 +29,17 @@
       "git add"
     ]
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged",
-    "commit-msg": "node verifyCommit.js"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "node verifyCommit.js"
+    }
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.3",
     "antd": "^4.16.8",
     "axios": "^0.21.1",
-    "core-js": "3",
+    "core-js": "^3.17.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -45,11 +48,12 @@
     "redux": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.15.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.9",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.6",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.1",
@@ -76,8 +80,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.3.1",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
-    "mini-css-extract-plugin": "^2.1.0",
+    "mini-css-extract-plugin": "^2.2.2",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
