--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
       "git add"
     ]
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
