--- a/.eslintrc
+++ b/.eslintrc
@@ -25,14 +25,15 @@
     "comma-dangle": ["error", "never"],
     "import/no-unresolved": "off",
     "import/extensions": "off",
-    "react/jsx-max-props-per-line": ["error", {"maximum": 1}],
+    "react/jsx-max-props-per-line": ["error", { "maximum": 1 }],
     "class-methods-use-this": "off",
     "function-paren-newline": ["error", "consistent"],
     "lines-between-class-members": ["error", "always"],
-    "no-multiple-empty-lines": ["error", {"max": 1}],
-    "object-curly-newline": ["error", {"consistent": true}],
-    "react/jsx-filename-extension": ["error", {"extensions": [".tsx"]}],
+    "no-multiple-empty-lines": ["error", { "max": 1 }],
+    "object-curly-newline": ["error", { "consistent": true }],
+    "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
