--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "typescript": "^4.4.2",
     "webpack": "^5.51.1",
