--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "antd": "^4.16.8",
     "axios": "^0.21.1",
     "core-js": "^3.17.2",
+    "js-beautify": "^1.10.1-rc2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-syntax-highlighter": "^15.4.4",
     "redux": "^4.1.1"
   },
   "devDependencies": {
@@ -64,11 +66,13 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
+    "@types/js-beautify": "^1.13.3",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
