--- a/package.json
+++ b/package.json
@@ -63,56 +63,58 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "^17.5.0",
+    "@commitlint/config-conventional": "^17.4.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
     "@types/js-beautify": "^1.13.3",
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.1",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^18.15.8",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.1.8",
-    "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@types/webpack-env": "^1.16.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-import": "^1.13.3",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-import": "^1.13.6",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.4",
     "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "cssnano-preset-advanced": "^5.1.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.1",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "mini-css-extract-plugin": "^2.2.2",
-    "node-sass": "^6.0.1",
+    "node-sass": "^8.0.0",
     "postcss": "^8.3.6",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.3.2",
-    "react-refresh": "^0.10.0",
-    "sass-loader": "^12.1.0",
+    "postcss-loader": "^7.1.0",
+    "postcss-preset-env": "^8.0.1",
+    "prettier": "^2.8.7",
+    "react-refresh": "^0.14.0",
+    "sass-loader": "^13.2.1",
     "style-loader": "^3.2.1",
-    "stylelint": "^13.13.1",
+    "stylelint": "^15.3.0",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "typescript": "^4.4.2",
-    "webpack": "^5.51.1",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.1",
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "typescript": "^5.0.2",
+    "webpack": "^5.76.3",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1",
     "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.0-3"
+    "webpackbar": "^5.0.2"
   }
 }
